Fix T101591: mathutils.geometry.intersect_line_line 2D vector error

Uninitialized stack memory was used when intersecting 2D vectors.